# food-label-analysis

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d37f7b66f3c_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/agents/: adk_runtime.py  change_analysis_agent.py  health_context_agent.py  ingredient_explainer_agent.py  label_extraction_agent.py  label_monitor_agent.py  root_agent.py  tools.py
backend/app/api/: comparisons.py  label_versions.py  products.py  runs.py
backend/app/prompts/: change_analysis_prompt.md  extraction_prompt.md  health_context_prompt.md  ingredient_explanation_prompt.md
backend/app/services/: label_check.py
backend/app/services/analysis/: plain_english.py  risk_rules.py
backend/app/services/comparison/: label_diff.py  significance_scoring.py
backend/app/services/extraction/: certification_detector.py  ingredient_normalizer.py  label_parser.py  nutrition_normalizer.py
backend/app/services/ocr/: base.py  google_vision_ocr.py  mock_ocr.py  tesseract_ocr.py
backend/app/services/scheduler/: weekly_checker.py
backend/seed/: seed_demo.py
backend/seed/fixtures/: maxfit_whey_v1.txt  maxfit_whey_v2.txt  nutricrunch_bar_v1.txt  nutricrunch_bar_v2.txt
backend/tests/: conftest.py  test_agents.py  test_api_products.py  test_check_now_flow.py  test_ingredient_parsing.py  test_label_diff.py  test_label_parser.py  test_nutrition_normalizer.py  test_significance_scoring.py
(+26 files in other folders)
