[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labelwatch-backend"
version = "0.1.0"
description = "LabelWatch India - agentic food label monitoring (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "apscheduler>=3.10",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# Google ADK + Gemini powered agents (demo mode works without these)
ai = ["google-adk>=1.0"]
# Dynamic-page fetching (falls back to httpx when absent)
playwright = ["playwright>=1.44"]
# Real OCR backends (mock OCR is used when absent)
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0", "google-cloud-vision>=3.7"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
